# opkg-lede

./: .gitignore  CMakeLists.txt  Makefile.am  configure.ac
libbb/: CMakeLists.txt  Makefile.am  all_read.c  concat_path_file.c  copy_file.c  copy_file_chunk.c  gz_open.c  gzip.c  gzip.h  last_char_is.c  libbb.h  make_directory.c  mode_string.c  parse_mode.c  safe_strncpy.c  time_string.c  unarchive.c  unzip.c  wfopen.c  xfuncs.c  xreadlink.c
libopkg/: CMakeLists.txt  Makefile.am  active_list.c  active_list.h  conffile.c  conffile.h  conffile_list.c  conffile_list.h  file_util.c  file_util.h  hash_table.c  hash_table.h  list.h  md5.c  md5.h  nv_pair.c  nv_pair.h  nv_pair_list.c  nv_pair_list.h  opkg.c  opkg.h  opkg_cmd.c  opkg_cmd.h  opkg_conf.c  opkg_conf.h  opkg_configure.c  opkg_configure.h  opkg_download.c  opkg_download.h  opkg_install.c  opkg_install.h  opkg_message.c  opkg_message.h  opkg_pathfinder.c  opkg_pathfinder.h  opkg_remove.c  opkg_remove.h  opkg_upgrade.c  opkg_upgrade.h  opkg_utils.c  (+36 more)
src/: CMakeLists.txt  Makefile.am  opkg-cl.c
tests/: CMakeLists.txt  Makefile.am  libopkg_test.c  opkg_active_list_test.c  opkg_extract_test.c  opkg_hash_test.c
